fixed navbar not showing over some content

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -7,10 +7,11 @@
   margin-bottom: 35px;
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 .nav-container {
   display: flex;
-  width: 100%;
+  width: 90%;
   justify-content: space-between;
   max-width: 1140px;
   margin: auto;
